--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -27,13 +27,12 @@
             <tr ng-repeat="customer in customerLeads">
                 <td>{{$index+1}}</td>
                 <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">{{customer.firstName}}</td>
-                <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
                 <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone}}
                 </td>
                 <td data-title="'Reg Date'" sortable="'date'" class="clickable-item">{{customer.createdAt |
                     date:medium}}
                 </td>
-                <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
+                <!--<td data-title="'Is Lead'" sortable="'yes'" class="clickable-item">Yes</td>-->
                 <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erpEnabled}}</td>
                 <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gpsEnabled}}</td>
                 <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.loadEnabled}}</td>
