--- a/client/views/partials/admin/customers/editUpdateTruckOwner.html
+++ b/client/views/partials/admin/customers/editUpdateTruckOwner.html
@@ -161,6 +161,17 @@
                             <label class="focus-effect-for-input" >Year In Service</label>
 
                         </div>
+                        <div class="form-group styling-input-list" >
+
+                            <ui-select multiple ng-model="truckOwner.selectTruckTypes" theme="bootstrap" close-on-select="false" title="Choose Truck Types">
+                                <ui-select-match placeholder="Choose Truck Types">{{$item.title}} / {{$item.tonnes}}T</ui-select-match>
+
+                                <ui-select-choices repeat="type in truckTypes | filter:$select.search">
+                                    {{type.title}}
+                                </ui-select-choices>
+                            </ui-select>
+<label class="focus-effect-for-input">Truck Types</label>
+                        </div>
 
                     </div>
                     <div class="col-xs-12 col-sm-6">
