--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -114,6 +114,7 @@
 <!--Directives-->
 <script src="js/directives/adminLeftNav.js"></script>
 <script src="js/directives/adminDatePicker.js"></script>
+<script src="js/directives/uiSelect.js"></script>
 
 </body>
 
