--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -1,32 +1,40 @@
-<div ng-controller="customerCtrl" ng-init="getCustomerLeads()">
+<div ng-controller="customerCtrl" ng-init="numOfCustomerLeads()">
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">Customers Leads</li>
         <li class="pull-right">
             <button class="btn btn-primary" ui-sref="customers.createCustomer">Create New</button>
         </li>
         <li class="pull-right col-xs-12 col-sm-2">
-            <select class="form-control">
-                <option>Select</option>
-                <option>Qualified</option>
-                <option>Request for Approval</option>
-                <option>Initiate</option>
-                <option>Callback</option>
-                <option>Duplicate</option>
-                <option>Junk Lead</option>
-                <option>Language Barrier</option>
-                <option>Not Interested</option>
+            <select class="form-control" ng-model="option" ng-change="initCustomerLeads(option)">
+                <option value="" selected>Select</option>
+                <option value="qualified">Qualified</option>
+                <option value="reqforapproval">Request for Approval</option>
+                <option value="initiate">Initiate</option>
+                <option value="callback">Callback</option>
+                <option value="duplicate">Duplicate</option>
+                <option value="junklead">Junk Lead</option>
+                <option value="lanbarrier">Language Barrier</option>
+                <option value="notinterested">Not Interested</option>
             </select>
         </li>
-    </ul>
-    <div class="clearfix"></div>
-    <div class="table-responsive">
-        <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center"
-               ng-table="customerParams">
+        <li class="col-xs-4 pull-right">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search" ng-model="transporter1">
+                <span class="input-group-addon" ng-click="searchByTransporter(transporter1);"><i
+                        class="glyphicon glyphicon-search"></i></span>
+            </div>
+        </li>
+        <div class="clearfix"></div>
 
+    </ul>
+    <div class="table-res">
+        <table class="table table-bordered table-striped table-condensed table-hover text-center"
+               ng-table="customerParams">
             <tbody>
             <tr ng-repeat="customer in customerLeads">
                 <td>{{$index+1}}</td>
-                <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">{{customer.firstName}}</td>
+                <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">{{customer.firstName}}
+                </td>
                 <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone}}
                 </td>
                 <td data-title="'Reg Date'" sortable="'date'" class="clickable-item">{{customer.createdAt |
@@ -48,9 +56,11 @@
                     </a>
                 </td>
             </tr>
-
+            <tr ng-if="!customerLeads || customerLeads.length === 0">
+                <td colspan="8">No Customer Leads Records exist.</td>
+            </tr>
             </tbody>
         </table>
-
     </div>
+
 </div>
