--- a/client/views/partials/admin/customers/editRestOfAll.html
+++ b/client/views/partials/admin/customers/editRestOfAll.html
@@ -1,5 +1,5 @@
-<div class="col-xs-12 newCust" ng-controller="customerCtrl" ng-init="getCustomerLeadDetails()">
-    <h4>{{pageTitle}}</h4>
+<div class="col-xs-12 newCust" ng-controller="customerCtrl" ng-init="getJunkLeadDetailsFun()">
+    <h4>Edit Rest Of All</h4>
 
     <div class="tabs-title">
         <ul class="nav nav-tabs">
@@ -239,7 +239,7 @@
 
             <div class="col-xs-12 save-btns">
                 <a href="#" class="btn btn-danger" ng-click="cancel()">Cancel</a>
-                <a href="#" class="btn btn-primary" ng-click="createLeads()">Submit</a>
+                <a href="#" class="btn btn-primary" ng-click="updateJunlLeads()">Submit</a>
             </div>
         </div>
         <div class="clearfix"></div>
