--- a/client/views/partials/admin/customers/editUpdateTruckOwner.html
+++ b/client/views/partials/admin/customers/editUpdateTruckOwner.html
@@ -239,10 +239,13 @@
                             </div>
                         </div>
                         <div class="col-xs-12">
-                            <span ng-repeat="doc in truckOwner.documentFiles">
+                            <span ng-repeat="doc in truckOwner.documentFiles" class="delfile">
                                <a href="assets/documents/{{doc}}" data-lightbox="assets/documents/{{doc}}">
-                                   <img src="assets/documents/{{doc}}" width="100"></a></span>
-
+                                   <img src="assets/documents/{{doc}}" width="100"></a>
+                              <span class="del-pos ">
+                                <i class="fa fa-times-circle clr-red" ng-click="removeDoc(doc,$index)"></i>
+                              </span>
+                            </span>
                         </div>
                     </div>
                 </div>
