--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -3,7 +3,12 @@
         <li class="pull-left name-head">GPS Device
             <Accounts></Accounts>
         </li>
-
+        <li class="col-xs-3">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+            </div>
+        </li>
         <li class="pull-right">
             <button class="btn btn-success" ng-click="assignDevicesModal()">Assign Devices</button>
         </li>
