--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -28,11 +28,11 @@
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
-                            <select class="form-control custom-form-control" ng-model="accountDetails.type">
+                            <select class="form-control custom-form-control" ng-model="accountDetails.role">
                                 <option value="" selected>Type*</option>
-                                <option>TruckOwner</option>
+                                <option>Truck Owner</option>
                                 <option>Manufacturer</option>
-                                <option>CommissionAgent</option>
+                                <option>Commission Agent</option>
                                 <option>Transporter</option>
                                 <option>GPS</option>
                             </select>
@@ -223,7 +223,7 @@
                 <uib-accordion-heading>Assign ERP Plan<i class="pull-right glyphicon"
                                                          ng-class="{'glyphicon-chevron-down': status.isOpenThre, 'glyphicon-chevron-right': !status.isOpenThre}"></i>
                 </uib-accordion-heading>
-                <div class="col-xs-12">
+                <div class="col-xs-12" ng-show="enableForm">
                     <ul class="list-inline plans">
                         <!--<li>
                             <select class="form-control custom-form-control planfc" ng-change="getPlansOfService()" ng-model="serviceSelected">
@@ -263,7 +263,7 @@
                     </ul>
                     <div ng-repeat="err in ERPPlanDEtails.errors">{{err}}</div>
                 </div>
-                <div class="col-xs-12 mt-20">
+                <div class="col-xs-12 mt-20" ng-show="assignedPlans.length">
                     <table class="table table-bordered">
                         <thead>
                         <th>Plan Type</th>
@@ -272,9 +272,9 @@
                         <th>Payble Amount</th>
                         <th>Received</th>
                         <th>Remarks</th>
+                        <th>Created Time</th>
                         <th>Start Time</th>
                         <th>Expiry Time</th>
-                        <th>Created Time</th>
                         </thead>
                         <tbody>
                         <tr ng-repeat="singlePlan in assignedPlans">
@@ -284,13 +284,14 @@
                             <td>{{singlePlan.amount}}</td>
                             <td>{{singlePlan.received}}</td>
                             <td>{{singlePlan.remark}}</td>
+                            <td>{{singlePlan.creationTime | date: 'mediumDate'}}</td>
                             <td>{{singlePlan.startTime | date: 'mediumDate'}}</td>
                             <td>{{singlePlan.expiryTime | date: 'mediumDate'}}</td>
-                            <td>{{singlePlan.creationTime | date: 'mediumDate'}}</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
+                <div ng-show="!assignedPlans.length">No Erp plans</div>
             </div>
         </uib-accordion>
 
