--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -144,66 +144,79 @@
             </div>
         </uib-accordion>
         <uib-accordion>
-            <div uib-accordion-group class="panel-default" is-open="status.isOpenOne">
-                <uib-accordion-heading>
-                    Assign Plans <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.isOpenOne, 'glyphicon-chevron-right': !status.isOpenOne}"></i>
+            <div uib-accordion-group class="panel-default" is-open="status.isOpenThre">
+                <uib-accordion-heading>Assign GPS Plan<i class="pull-right glyphicon"
+                                                         ng-class="{'glyphicon-chevron-down': status.isOpenThre, 'glyphicon-chevron-right': !status.isOpenThre}"></i>
                 </uib-accordion-heading>
-                <div class="col-xs-12">
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="form-group">
-                            <select class="form-control" ng-model="addPlan.planId">
-                                <option value="" selected>Select truck</option>
-                                <option ng-repeat="truck in trucks" value="{{truck._id}}">{{truck.registrationNo}}</option>
+                <div class="col-xs-12" ng-show="true">
+                    <ul class="list-inline plans">
+                        <!--<li>
+                            <select class="form-control custom-form-control planfc" ng-change="getPlansOfService()" ng-model="serviceSelected">
+                                <option selected value="">Select Service*</option>
+                                <option value="gps">GPS</option>
+                                <option value="erp">ERP</option>
+                                <option value="both">GPS & ERP</option>
                             </select>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-3">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Date" ng-model="addPlan.date"/>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-3">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Amount" ng-model="addPlan.amount"/>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-2">
-                        <div class="form-group">
-                            <a href="#" class="btn btn-primary" style="width: 100% !important;">Add</a>
-                        </div>
-                    </div>
+                        </li>-->
+                        <li>
+                            <select class="form-control custom-form-control planfc" ng-model="GPSPlanDEtails.planId">
+                                <option selected value="">Plans*</option>
+                                <option ng-repeat="plan in plans" value="{{plan._id}}">{{plan.planName}} -
+                                    {{plan.amount}}
+                                </option>
+                            </select>
+                        </li>
+                        <li>
+                            <admin-date-picker ng-model="GPSPlanDEtails.startTime" placeholder="'Start Time *'"
+                                               class="'custom-form-control planfc'"></admin-date-picker>
+                        </li>
+                        <li>
+                            <admin-date-picker ng-model="GPSPlanDEtails.expiryTime" placeholder="'Expiry Time *'"
+                                               class="'custom-form-control planfc'"></admin-date-picker>
+                        </li>
+                        <li class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control planfc"
+                                   ng-model="GPSPlanDEtails.amount"/>
+                            <label class="focus-effect-for-input">Amount</label>
+                        </li>
+                        <li class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control planfc"
+                                   ng-model="GPSPlanDEtails.remark"/>
+                            <label class="focus-effect-for-input">Remark</label>
+                        </li>
+                        <button class="btn btn-success" ng-click="assignGPSPlan()">Assign</button>
+                    </ul>
+                    <div ng-repeat="err in GPSPlanDEtails.errors">{{err}}</div>
                 </div>
-
-                <div class="col-xs-12">
-                    <table class="table table-bordered table-responsive">
+                <div class="col-xs-12 mt-20" ng-show="true">
+                    <table class="table table-bordered">
                         <thead>
-                        <tr>
-                            <th>Plan Name</th>
-                            <th>Plan Amount</th>
-                            <th>Payable Amount</th>
-                            <th>Received</th>
-                            <th>Remarks</th>
-                            <th>Start Time</th>
-                            <th>Expiry Time</th>
-                            <th>Created Time</th>
-                        </tr>
+                        <th>Plan Type</th>
+                        <th>Plan Name</th>
+                        <th>Plan Amount</th>
+                        <th>Payble Amount</th>
+                        <th>Received</th>
+                        <th>Remarks</th>
+                        <th>Created Time</th>
+                        <th>Start Time</th>
+                        <th>Expiry Time</th>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="plan in devicePlanHistory">
-                        <!--<tr>-->
-                            <td>{{plan.planId.planName}}</td>
-                            <td>{{plan.planId.amount}}</td>
-                            <td>{{plan.amount}}</td>
-                            <td>{{plan.received}}</td>
-                            <td>{{plan.remark}}</td>
-                            <td>{{plan.startTime | date: 'mediumDate'}}</td>
-                            <td>{{plan.expiryTime | date: 'mediumDate'}}</td>
-                            <td>{{plan.creationTime | date: 'mediumDate'}}</td>
+                        <tr ng-repeat="singlePlan in assignedPlans">
+                            <td>ERP</td>
+                            <td>{{singlePlan.planId.planName}}</td>
+                            <td>{{singlePlan.planId.amount}}</td>
+                            <td>{{singlePlan.amount}}</td>
+                            <td>{{singlePlan.received}}</td>
+                            <td>{{singlePlan.remark}}</td>
+                            <td>{{singlePlan.creationTime | date: 'mediumDate'}}</td>
+                            <td>{{singlePlan.startTime | date: 'mediumDate'}}</td>
+                            <td>{{singlePlan.expiryTime | date: 'mediumDate'}}</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
-
+                <div ng-show="true">No GPS plans</div>
             </div>
         </uib-accordion>
         <div class="col-xs-12 save-btns">
